fix(sidebar): scrolllock and returnscroll
The scrollLock and returnScroll setting was not working which this PR fixes
It also adopts the same scrollbar vanish code from modal to avoid moving page content when the scrollbar vanishes

--- a/src/definitions/modules/sidebar.less
+++ b/src/definitions/modules/sidebar.less
@@ -95,10 +95,14 @@
      Pushable
 ---------------*/
 
-.pushable {
+.pushable.pushable.pushable {
   height: 100%;
   overflow-x: hidden;
-  padding: 0 !important;
+  padding: 0;
+  &.locked {
+    overflow-y: hidden;
+    background: inherit;
+  }
 }
 
 /* Whole Page */
